--- a/AndBible/res/values-ko/strings.xml
+++ b/AndBible/res/values-ko/strings.xml
@@ -149,8 +149,9 @@
   <string name="bookmark_labels">즐겨찾기 꼬리표</string>
   <string name="assign_labels">할당 레이블</string>
   <string name="new_label">새 분류</string>
-  <string name="new_label_prompt">이름</string>
+  <string name="label_name_prompt">이름</string>
   <string name="label_unlabelled">분류되지 않은</string>
+  <!--Sort orders used for Bookmarks and MyNotes-->
   <!--Dictionary-->
   <string name="dictionary">사전</string>
   <string name="search_dictionary_hint">사전 검색</string>
@@ -192,6 +193,7 @@
   <string name="restore_confirmation">내 참고들 및 즐겨찾기를 덮어 쓰시겠습니까?</string>
   <string name="restore_success">SD 카드에 %s 에서 복원한 내 참고들 및 즐겨찾기</string>
   <!--About-->
+  <string name="about_version">버전의 %s</string>
   <!--Document types-->
   <string name="doc_type_bible">성경</string>
   <string name="doc_type_commentary">논평</string>
