--- a/AndBible/res/values-ru/strings.xml
+++ b/AndBible/res/values-ru/strings.xml
@@ -217,7 +217,7 @@
   <string name="retry">Попытайтесь снова</string>
   <string name="please_wait">Пожалуйста подождите...</string>
   <string name="all">Все</string>
-  <string name="default_value">Язык по умолчанию</string>
+  <string name="default_value">@string/lang_default</string>
   <!--Errors-->
   <string name="error_occurred">Произошла ошибка</string>
   <string name="error_no_content">В выбранных стихах нет содержания</string>
