--- a/AndBible/res/values/strings.xml
+++ b/AndBible/res/values/strings.xml
@@ -130,8 +130,8 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="all_hebrew_occurrences">Find all occurrences</string>
     <string name="no_indexed_bible_with_strongs_ref">You must download a Bible containing Strong\'s numbers and download its index via Search</string>
     <string name="morph_robinson_not_installed">Please download \'Robinson\'s Morphological Analysis Codes\' dictionary</string>
-    <string name="strongs_toggle_button_on">nnnn</string>
-    <string name="strongs_toggle_button_off">nnnn</string>
+    <string name="strongs_toggle_button_on">3483</string>
+    <string name="strongs_toggle_button_off">3756</string>
 
     <!-- Module download -->
     <string name="download">Download Documents</string>
