--- a/AndBible/res/values/strings.xml
+++ b/AndBible/res/values/strings.xml
@@ -29,7 +29,7 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="version_text">Version %s</string>
     <string name="no_sdcard_error">Please insert an SD card and start And Bible again.</string>
 
-    <!-- main menu -->
+    <!-- Main menu -->
     <string name="chooseBook">Document</string>
     <string name="selectPassage">Passage</string>
     <string name="search">Find</string>
@@ -38,9 +38,6 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="speak">Speak</string>
     <string name="help">Help</string>
     <string name="verse">Verse</string>
-    <string name="drawer_open">Open</string>
-	<string name="drawer_close">Close</string>
-    
 
     <!-- Passage navigation -->
     <string name="choosePassageBookName">Choose Book</string>
@@ -261,7 +258,7 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="no">No</string>
     <string name="save">Save</string>
     <string name="error">Error</string>
-    <string name="more">More</string>
+    <string name="more">More...</string>
     <string name="retry">Try Again</string>
     <string name="please_wait">Please wait...</string>
     <string name="all">All</string>
